# Funkin-Wii

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  test.c
docker/: Dockerfile.wii
engine/: CMakeLists.txt  Makefile
engine/include/: FinEngine.h  FinGame.h  engine.h
engine/include/finengine/: FinGame.h
engine/source/: FinGame.cpp  engine.cpp
engine/source/engine/: FinGame.cpp
engine/source/system/: system.h  system_dolphin.cpp
finengine/include/: FinEngine.h  FinGame.h  FinState.h
finengine/source/: FinGame.cpp
funkin/: CMakeLists.txt  Makefile
funkin/source/: main.cpp
funkin/source/states/: sparrowtest.cpp  sparrowtest.h  teststate.cpp  teststate.h  titlestate.cpp  titlestate.h  titletest.cpp  titletest.h
funkin/source/states/old/: sparrowteststate.cpp
funkin/source/states/test/: titleteststate.cpp
mk/: common.mk
sd/fnfwii/images/characters/boyfriend/: boyfriend_main.xml
